# ecovector-android

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
ecovector/: build.gradle.kts  consumer-rules.pro
ecovector-benchmark/: build.gradle.kts
ecovector-benchmark/src/main/cpp/: CMakeLists.txt
ecovector-benchmark/src/main/cpp/jni/: JniArrayUtils.h  NativeBenchmarkRunner.cpp
ecovector-benchmark/src/main/cpp/src/: BenchmarkObxManager.cpp  BenchmarkObxManager.h  BenchmarkRunner.cpp  BenchmarkRunner.h  BenchmarkTypes.h  GroundTruthResolver.cpp  GroundTruthResolver.h  MetricsEvaluator.cpp  MetricsEvaluator.h  QueryFilterResolver.cpp  QueryFilterResolver.h
ecovector-benchmark/src/main/cpp/src/object_box/: objectbox-benchmark-model.h  objectbox-benchmark-model.json  schema-benchmark.obx.cpp  schema-benchmark.obx.hpp
ecovector-benchmark/src/main/java/io/graphai/ecovector/benchmark/: BenchmarkConfig.kt  BenchmarkDatasetLoader.kt  BenchmarkModels.kt  BenchmarkRunner.kt  NativeBenchmarkRunner.kt  PipelineStage.kt  StageDependencyResolver.kt
ecovector-benchmark/src/main/java/io/graphai/ecovector/benchmark/loaders/: CallDocumentLoader.kt  DomainLoader.kt  JsonlDomainLoader.kt  MmsDocumentLoader.kt  PdfDocumentLoader.kt  SmsDocumentLoader.kt
ecovector-benchmark/src/main/java/io/graphai/ecovector/benchmark/ui/: BenchmarkResultsScreen.kt  BenchmarkTheme.kt  BestResultBanner.kt  DbStatsRow.kt  ProgressComponents.kt  ResultsTable.kt  RetrieverDetailCard.kt
ecovector-benchmark/src/test/java/io/graphai/ecovector/benchmark/: StageDependencyResolverTest.kt
ecovector/src/main/: AndroidManifest.xml
ecovector/src/main/cpp/: CMakeLists.txt
ecovector/src/main/cpp/jni/: JniSearchUtils.h  NativeBM25Retriever.cpp  NativeEcoVectorStore.cpp  NativeEnsembleRetriever.cpp  NativeObxVectorRetriever.cpp  NativeVectorRetriever.cpp
ecovector/src/main/cpp/src/: SearchUtils.h
ecovector/src/main/cpp/src/bm25/: BM25Index.cpp  BM25Index.h
ecovector/src/main/cpp/src/chunker/: Chunker.cpp  Chunker.h  SentenceChunker.cpp  SentenceChunker.h  TokenAwareChunker.cpp  TokenAwareChunker.h
ecovector/src/main/cpp/src/common/: Logging.h  TokenConstants.h
ecovector/src/main/cpp/src/eco_vector/: EcoVectorIndex.cpp  EcoVectorIndex.h
ecovector/src/main/cpp/src/eco_vector_store/: EcoVectorStore.cpp  EcoVectorStore.h
ecovector/src/main/cpp/src/embedder/: Embedder.cpp  Embedder.h
ecovector/src/main/cpp/src/kiwi/: KiwiHashUtil.h  KiwiTokenizer.cpp  KiwiTokenizer.h
ecovector/src/main/cpp/src/object_box/: ObxManager.cpp  ObxManager.h  objectbox-model.h  objectbox-model.json  schema.obx.cpp  schema.obx.hpp
ecovector/src/main/cpp/src/onnx/: OnnxRuntime.cpp  OnnxRuntime.h
ecovector/src/main/cpp/src/reranker/: IReranker.h  LCSReranker.cpp  LCSReranker.h
ecovector/src/main/cpp/src/retriever/: BM25Retriever.cpp  BM25Retriever.h  EnsembleRetriever.cpp  EnsembleRetriever.h  HydrationUtil.h  IRetriever.cpp  IRetriever.h  IndexSearchResult.h  ObxVectorRetriever.cpp  ObxVectorRetriever.h  QueryBundle.h  VectorRetriever.cpp  VectorRetriever.h
ecovector/src/main/cpp/src/tokenizer/: Tokenizer.cpp  Tokenizer.h
ecovector/src/main/java/io/graphai/ecovector/: AssetCopier.kt  BM25Retriever.kt  ChunkParams.kt  DocumentSource.kt  EcoVectorConfig.kt  EcoVectorStore.kt  EnsembleRetriever.kt  NativeBM25Retriever.kt  NativeEcoVectorStore.kt  NativeEnsembleRetriever.kt  NativeObxVectorRetriever.kt  NativeVectorRetriever.kt  ObxVectorRetriever.kt  PdfTextExtractor.kt  QueryBundle.kt  Retriever.kt  RetrieverParams.kt  SearchResult.kt  SearchResultDeduper.kt  SearchResultParser.kt  TextCleaner.kt  VectorRetriever.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: pack-native-libs.sh
